Ajuste application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ aws.sqs.queues.pedido-criado=pedido-criado
 
 services.auth.url=${AUTH_URL:http://localhost:8081}
 
-services.mail.from-name="Lanchonete techchalenge 61"
+services.mail.from-name="Hackathon 61"
 services.mail.from-mail=noreply@example.com
 services.mail.enabled=true
 services.mail.url=${MAIL_API_URL:https://sandbox.api.mailtrap.io/api/send/2675640}
