--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -1,31 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lanchonete
+  name: hackathon-ponto
   labels:
-    app: lanchonete
+    app: hackathon-ponto
 spec:
   template:
     metadata:
-      name: lanchonete
+      name: hackathon-ponto
       labels:
-        app: lanchonete
+        app: hackathon-ponto
     spec:
-      serviceAccountName: lanchonete-sa
+      serviceAccountName: hackathon-ponto-sa
       volumes:
         - name: secrets-store-inline
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: lanchonete-secrets
-        - name: lanchonete-volume
+              secretProviderClass: hackathon-ponto-secrets
+        - name: hackathon-volume
           hostPath:
-            path: /home/lanchonete-volume
+            path: /home/hackathon-volume
             type: DirectoryOrCreate
       containers:
-        - name: lanchonete
-          image: vwnunes/tech-challenge-61:latest
+        - name: hackathon-ponto
+          image: vwnunes/hackathon-ponto-61:latest #TODO: verificar o nome da imagem
           imagePullPolicy: "Always"
           ports:
             - containerPort: 8080
@@ -33,39 +33,37 @@ spec:
             - name: DB_HOST
               valueFrom:
                 secretKeyRef:
-                  name: lanchonete-secrets-aws
+                  name: hackathon-ponto-secrets-aws
                   key: mysqlHost
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: lanchonete-secrets-aws
+                  name: hackathon-ponto-secrets-aws
                   key: mysqlUser
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
-                  name: lanchonete-secrets-aws
+                  name: hackathon-ponto-secrets-aws
                   key: mysqlPassword
             - name: MAIL_API_URL
               valueFrom:
                 secretKeyRef:
-                  name: lanchonete-secrets-aws
+                  name: hackathon-ponto-secrets-aws
                   key: mailApiUrl
             - name: MAIL_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: lanchonete-secrets-aws
+                  name: hackathon-ponto-secrets-aws
                   key: mailApiKey
-            - name: PRODUCAO_URL
-              value: "http://nlb-producao-service"
             - name: AUTH_URL
               value: "http://nlb-auth-service"
           volumeMounts:
-            - name: lanchonete-volume
-              mountPath: "/mnt/lanchonete-volume"
+            - name: hackathon-volume
+              mountPath: "/mnt/hackathon-ponto-volume"
             - name: secrets-store-inline
-              mountPath: "/mnt/lanchonete-secrets"
+              mountPath: "/mnt/hackathon-ponto-secrets"
               readOnly: true
   replicas: 2
   selector:
     matchLabels:
-      app: lanchonete
+      app: hackathon-ponto
