--- a/deployment/secrets.yaml
+++ b/deployment/secrets.yaml
@@ -1,36 +1,36 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: lanchonete-secrets
+  name: hackathon-ponto-secrets
 spec:
   provider: aws
   parameters:
     objects: |
-      - objectName: "/tech-challenge-lanchonete/dev/DB_HOST"
+      - objectName: "/hackathon-ponto/dev/DB_HOST"
         objectType: "ssmparameter"
-        objectAlias: mysqlHost
-      - objectName: "/tech-challenge-lanchonete/dev/DB_USERNAME"
+        objectAlias: postgresHost
+      - objectName: "/hackathon-ponto/dev/DB_USERNAME"
         objectType: "ssmparameter"
-        objectAlias: mysqlUser
-      - objectName: "/tech-challenge-lanchonete/dev/DB_PASSWORD"
+        objectAlias: postgresUser
+      - objectName: "/hackathon-ponto/dev/DB_PASSWORD"
         objectType: "ssmparameter"
-        objectAlias: mysqlPassword
-      - objectName: "/tech-challenge-lanchonete/dev/MAIL_API_URL"
+        objectAlias: postgresPassword
+      - objectName: "/hackathon-ponto/dev/MAIL_API_URL"
         objectType: "ssmparameter"
         objectAlias: mailApiUrl
-      - objectName: "/tech-challenge-lanchonete/dev/MAIL_API_KEY"
+      - objectName: "/hackathon-ponto/dev/MAIL_API_KEY"
         objectType: "ssmparameter"
         objectAlias: mailApiKey
   secretObjects:
-    - secretName: lanchonete-secrets-aws
+    - secretName: hackathon-ponto-secrets-aws
       type: Opaque
       data:
-        - objectName: mysqlHost
-          key: mysqlHost
-        - objectName: mysqlUser
-          key: mysqlUser
-        - objectName: mysqlPassword
-          key: mysqlPassword
+        - objectName: postgresHost
+          key: postgresHost
+        - objectName: postgresUser
+          key: postgresUser
+        - objectName: postgresPassword
+          key: postgresPassword
         - objectName: mailApiUrl
           key: mailApiUrl
         - objectName: mailApiKey
