--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nlb-lanchonete-service
+  name: nlb-hackathon-ponto-service
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: external
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
     service.beta.kubernetes.io/aws-load-balancer-scheme: internal
-    service.beta.kubernetes.io/aws-load-balancer-name: nlb-lanchonete-service
+    service.beta.kubernetes.io/aws-load-balancer-name: nlb-hackathon-ponto-service
 spec:
   type: LoadBalancer
   ports:
@@ -14,4 +14,4 @@ spec:
       port: 80
       targetPort: 8080
   selector:
-    app: lanchonete
+    app: hackathon-ponto
