implementação endpoint status do dia

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -14,7 +14,7 @@ spring.h2.console.enabled=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
-techchalenge.openapi.dev-url=http://localhost:8080
+hackathon.openapi.dev-url=http://localhost:8080
 springdoc.swagger-ui.operationsSorter=method
 
 services.auth.url=${AUTH_URL:http://localhost:9999}
