--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jackson.default-property-inclusion=non_null
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
-techchalenge.openapi.dev-url=http://localhost:8080
+hackathon.openapi.dev-url=http://localhost:8080
 springdoc.swagger-ui.operationsSorter=method
 
 aws.sqs.queues.pagamentos=pagamentos
