--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,31 @@
 version: '3.5'
 
 services:
-  mysql:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    healthcheck:
-      test: "exit 0"
+  postgres:
+    image: postgres
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: lanchonete_db
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_USER: root
+      POSTGRES_HOST: postgres
+      POSTGRES_DB: ponto_db
     ports:
-      - "3306:3306"
+      - "5432:5432"
     networks:
-      - tech_challenge_app_network
+      - hackathon_61_ponto_network
     expose:
-      - 3306
+      - 5432
+  localstack:
+    container_name: hackathon_61_ponto_localstack
+    image: localstack/localstack
+    ports:
+      - "4566:4566"
+      - "4510-4559:4510-4559"
+    environment:
+      AWS_ACCESS_KEY_ID: admin
+      AWS_SECRET_ACCESS_KEY: admin
+      AWS_REGION: us-east-1
+    volumes:
+      - './docker/localstack/setup-queues.sh:/etc/localstack/init/ready.d/init-sqs.sh'
 
   app:
     build:
@@ -22,31 +33,18 @@ services:
       dockerfile: Dockerfile
     restart: on-failure
     environment:
-      DB_HOST: 'mysql:3306/lanchonete_db'
+      DB_HOST: 'mysql:3306/lanchonete_db' #TODO AJUSTAR PORTA
       DB_USER: 'root'
       DB_PASS: '123456'
     ports:
       - "8080:8080"
     networks:
-      - tech_challenge_app_network
+      - hackathon_61_ponto_app_network
     depends_on:
-      mysql:
+      postgres:
         condition: service_healthy
-      mock:
-        condition: service_started
-
-  mock:
-    image: wiremock/wiremock
-    ports:
-      - "8081:8080"
-    networks:
-      - tech_challenge_app_network
-    volumes:
-      - ./wiremock/__files:/home/wiremock/__files
-      - ./wiremock/mappings:/home/wiremock/mappings
-      - ./wiremock/logs:/home/wiremock/logs
 
 networks:
-  tech_challenge_app_network:
-    name: "tech_challenge_app_network"
+  hackathon_61_ponto_app_network:
+    name: "hackathon_61_ponto_app_network"
     driver: bridge
