--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hackathon-ponto
 spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost:5432/ponto_db}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:123456}
@@ -15,11 +15,7 @@ logging.level.org.hibernate=ERROR
 hackathon.openapi.dev-url=http://localhost:8080
 springdoc.swagger-ui.operationsSorter=method
 
-aws.sqs.queues.pagamentos=pagamentos
-aws.sqs.queues.producao=fila-producao
-aws.sqs.queues.pedido-criado=pedido-criado
-
-services.auth.url=${AUTH_URL:http://localhost:8081}
+aws.sqs.queues.relatorios=relatorios
 
 services.mail.from-name="Hackathon 61"
 services.mail.from-mail=noreply@example.com
