--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ services.mail.from-mail=noreply@example.com
 services.mail.enabled=true
 services.mail.url=${MAIL_API_URL:https://sandbox.api.mailtrap.io/api/send/2675640}
 services.mail.api-key=${MAIL_API_KEY:local}
+
+relatorio.csv=./relatorio.csv
