--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,6 @@ services.mail.enabled=true
 services.mail.url=${MAIL_API_URL:https://sandbox.api.mailtrap.io/api/send/2675640}
 services.mail.api-key=${MAIL_API_KEY:local}
 
+ponto.auth.secret=${AUTH_SECRET:ef9fcc24-fed5-4e9e-9c64-3efcc7b19f38}
+
 relatorio.csv=./relatorio-{matricula}-{mes}-{ano}.csv
