--- a/deployment/secrets.yaml
+++ b/deployment/secrets.yaml
@@ -15,6 +15,9 @@ spec:
       - objectName: "/hacka-ponto-61/dev/DB_PASSWORD"
         objectType: "ssmparameter"
         objectAlias: postgresPassword
+      - objectName: /hacka-ponto-61/dev/AUTH_SECRET
+        objectType: "ssmparameter"
+        objectAlias: authSecret
       - objectName: "/tech-challenge-lanchonete/dev/MAIL_API_URL"
         objectType: "ssmparameter"
         objectAlias: mailApiUrl
@@ -35,3 +38,5 @@ spec:
           key: mailApiUrl
         - objectName: mailApiKey
           key: mailApiKey
+        - objectName: authSecret
+          key: authSecret
