--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 aws.access-key=${AWS_ACCESS_KEY:admin}
 aws.secret-key=${AWS_SECRET_KEY:admin}
 aws.endpoint=${AWS_ENDPOINT:http://localhost:4566}
-
+spring.sql.init.mode=never
 services.mail.enabled=false
