--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hackathon-ponto
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost:5432/ponto_db}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:123456}
